--- a/style.css
+++ b/style.css
@@ -10,14 +10,14 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #080536;
+    background: #acf83a;
 }
 
 .clock{
     width: 500px;
     height: 500px;
     position: relative;
-    background-color: slategray;
+    background-color: rgb(0, 0, 0);
     border-radius: 50%;
     display: flex;
     justify-content: center;
@@ -30,6 +30,21 @@ body {
     position: absolute;
     text-align: center;
     inset: 40px;
-    color: chartreuse;
+    color: rgb(255, 242, 0);
     font-size: 50px;
+  
+}
+
+.number b{
+    transform: rotate(calc(-30deg * var(--n)));
+    display: inline-block;
+}
+
+
+.center-dot{
+    position: absolute;
+    width: 25px;
+    height: 25px;
+ background-color: #e12e06;
+ border-radius: 50%;
 }
