--- a/style.css
+++ b/style.css
@@ -10,8 +10,30 @@ body {
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: #f6ff00;
+    background: #000000fe;
 }
+.name {
+    position: absolute;
+    top: 100px;
+    left: 51%;
+    transform: translateX(-50%);
+    font-size: 20px;
+    color linear-gradient(#5ff700, #0077ff);
+    z-index: 2;
+    font-family: 'Arial Black', Arial, sans-serif;
+    color: rgb(7, 91, 130);
+}
+
+.title {
+    color: rgb(221, 22, 22);
+    font-size: 50px;
+    position: absolute;
+    left: 50%;
+    top: calc(90% + 50px);
+    transform: translateX(-50%);
+    white-space: nowrap;
+}
+
 
 .clock{
     width: 550px;
@@ -22,7 +44,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background: radial-gradient(circle, #053618 0%, #000d1a 100%);
+    background: radial-gradient(circle, #000000 0%, #030125f7 100%);
 }
 
 .clock::before {
@@ -31,8 +53,8 @@ body {
     height: 570px;
     position: absolute;
     border-radius: 50%;
-    background: linear-gradient(#870b0b, #00fffb);
-    box-shadow:  0 0 15px 15px rgba(114, 5, 5, 0.325);
+    background: linear-gradient(#f70000, #07075f);
+    box-shadow:  0 0 15px 15px rgba(6, 182, 185, 0.737);
     z-index: -1;
 }
 
@@ -41,9 +63,9 @@ body {
     position: absolute;
     text-align: center;
     inset: 20px;
-    color: rgb(124, 241, 6);
+    color: rgb(13, 201, 230);
     font-size: 50px;
-    text-shadow: 0 0 8px rgb(14, 1, 255);
+    text-shadow: 0 0 6px rgb(49, 7, 15);
   
 }
 
@@ -57,9 +79,9 @@ body {
     position: absolute;
     width: 30px;
     height: 30px;
- background-color: #fffb01;
+ background-color: #00ff0d;
  border-radius: 50%;
- border: 2px solid rgb(111, 0, 255);
+ border: 4px solid rgb(198, 30, 30);
 
 }
 
@@ -71,22 +93,25 @@ body {
     bottom: 50%;
     transform: translate(-50%) rotate(calc(var(--rotate) * 1deg));
     transform-origin: bottom;
+    border-radius: 20px;
 }
 
 .hour-hand{
-     width: 12px;
+     width: 16px;
     height: 130px;
-    background-color: rgb(69, 254, 8);
+background: linear-gradient(to top, #00f7f7, rgb(255, 6, 234));
 }
 
 .minute-hand{
     width: 10px;
     height: 190px;
-    background-color: #ef11ff;
+   background: linear-gradient(to top, #61f101, rgb(6, 14, 247));
+
 }
 
 .second-hand{
-    width: 6px;
-    height: 210px;
-    background-color: rgb(255, 0, 0);
+    width: 4px;
+    height: 220px;
+       background: linear-gradient(to top, #060600, rgb(255, 0, 0));
+
 }
